Sat Mar 17 12:43:15 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (suffix_scan::next): Avoid searching for foo.lnk twice when
	input is "foo".

Sat Mar 17 18:10:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_socket): Set protocol to 0 when address family is
	AF_UNIX to avoid WSAEPROTONOSUPPORT error.

Sat Mar 17 09:51:32 2001  Mathew Brozowski <brozow@tavve.com>

	* net.cc (cygwin_socket): Pass protocol parameter to socket call.

Sat Mar 17 02:05:38 2001  Christopher Faylor <cgf@cygnus.com>

	* dir.cc (readdir): Use strcasematch for consistency.
	* path.cc (symlink_info): Eliminate known_suffix.
	(path_conv::check): Always copy ext_here to end of buffer, if found.
	(suffix_scan): Eliminate ext_here, add suffixes_start.
	(suffix_scan::has): Eliminate an argument.  Reorganize.  Always return
	pointer to end of input path.
	(suffix_scan::next): Take a second pass through the suffix list looking
	for .lnk.
	(symlink_info::check): Eliminate known_suffix usage.

Sat Mar 17 00:10:52 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (stat_dev): Give devices full read/write by default.

Saturday Mar 17 3:45 2001 Robert Collins <rbtcollins@hotmail.com>

	* thread.cc (MTinterface::CreateCond): Check for null attr pointer.

Fri Mar 16 21:13:23 2001  Christopher Faylor <cgf@cygnus.com>

	* fhandler_termios.cc (fhandler_termios::line_edit): Don't accept input
	when a signal is sent or we'll end up in an EOF/signal race.

Fri Mar 16 20:25:40 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc: Translate scan states from defines to enums.
	(suffix_scan): Rename state to nextstate for clarity.
	(lnk_match): Change to allow multiple states to indicate that a .lnk
	has been matched.
	(suffix_scan::has): Eliminate a goto.  Handle .lnk as a special case,
	since a .lnk may also need to be tacked on the end of a .lnk.
	(suffix_scan::next): Don't increment next state.  Set it specifically.
	Recognize new .lnk states.
